Fixed Mobile issues with overflow

--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,17 @@ h1 {
   text-align: center;
 }
 
+@media only screen and (max-width: 991px){
+    h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        color: #d8d8d8;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+}
+
 h2 {
   font-size: 1.8rem;
   font-weight: 600;
